feat: Support x-api-key header for authentication (#4347)
* feat: Support x-api-key header for authentication


* fix lint issues


* reduce cognitive complexity


* add more tests


* Update swagger


* configure swagger with new X-API-Key header


* Doc X-API-Key


* panic in the middleware


---------
